# CosSelect

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  smoke_test.py
backend/app/: celery_app.py  cleanup.py  config.py  crud.py  database.py  deps.py  main.py  models.py  response.py  schemas.py  security.py  storage.py  tasks.py  ws.py
backend/app/routers/: approvals.py  categories.py  detail.py  interactions.py  participants.py  photos.py  spaces.py  stats.py
frontend/: .npmrc  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/components/: CategoryNodeItem.vue  CategoryTree.vue  CommentList.vue  ImportPreviewNode.vue  ImportThumb.vue  PhotoGrid.vue  PhotoViewer.vue
frontend/src/router/: index.ts
frontend/src/stores/: session.ts
frontend/src/styles/: dark.scss
frontend/src/utils/: clipboard.ts  folderImport.ts  image.ts  thumbnail.ts  thumbnailWorker.ts  ws.ts
frontend/src/views/: ImportFolder.vue  JoinSpace.vue  LeaderCreate.vue  LeaderManage.vue  Portal.vue  SpaceHome.vue  StatsDashboard.vue  WaitingApproval.vue
